<resources>
    <string name="app_name">PC-CARE</string>
    <string name="suppiler_Home">Supplier</string>
    <string name="update_supplier">Update</string>
    <string name="Customer_Add_Det">Customer</string>
    <string name="update_customer">Update</string>
    <string name="income">Income</string>
    <string name="cusname">Name</string>
    <string name="cusdevice">Device</string>
    <string name="cusissue">Issues</string>
    <string name="cusparts">Parts</string>
    <string name="custotalamount">Total Amount</string>
    <string name="cuspaid">Paid:</string>
    <string name="cusphoneno">Phone No</string>
    <string name="supplierpaytxt">Supplier Payaments</string>
    <string name="employyepay">Employees Payments</string>
    <string name="expneditures">Expenditures</string>
    <string name="totalprofit">Total Profit</string>
    <string name="supname">Name</string>
    <string name="supaddress">Address</string>
    <string name="supitems">Items</string>
    <string name="supamount">Total Amount</string>
    <string name="suppaid">Paid</string>
    <string name="supphone">Phone No</string>
    <string name="stock_header">Stock</string>
    <string name="list_layout_edit_btn">Edit</string>
    <string name="list_layout_pull_btn">Pull</string>
    <string name="list_layout_push_btn">Push</string>
    <string name="additem_header">Add Item</string>
    <string name="item_code_hint">Item code</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_brand_hint">Brand</string>
    <string name="item_type_hint">Item type</string>
    <string name="add_item_btn">Add</string>
    <string name="edititem_header">Edit Item</string>
    <string name="update_btn_txt">Update</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="item_discription">Item Description</string>
    <string name="item_availability">Availability</string>
    <string name="itemcode">Item code :</string>
    <string name="Item_model">Model :</string>
    <string name="availability">Availability :</string>
    <string name="brand">Brand :</string>
    <string name="addnumber">+</string>
    <string name="removenumber">-</string>
    <string name="model_hint">Model</string>
    <string name="availability_hint">Availability</string>
    <string name="qty">Qty :</string>

</resources>
